# Business_Intelligence_Agent

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  startup.bat
samples/: incident_payment_service_outage.md  kt_session_payment_service_onboarding.md  meeting_sprint_planning_q2.md  product_discovery_saved_cards_feature.md
src/: config.py
src/agents/: doc_search_agent.py  kt_doc_agent.py  mom_agent.py  orchestrator.py  runbook_updater.py  translation_agent.py  user_story_agent.py
src/models/: __init__.py  schemas.py
src/pipeline/: doc_parser.py  ingest.py  transcriber.py
src/tools/: chroma_manager.py  embedding_manager.py  init_db.py  job_lifecycle.py  job_store.py  output_writer.py  provider_manager.py  setup_translation.py
src/ui/: __init__.py  generate_tab.py  history_tab.py  home_tab.py  landing.py  search_tab.py  settings_tab.py  upload_tab.py
templates/: kt_doc.j2  mom.j2  runbook.j2  user_story.j2
tests/integration/: test_ingest_pipeline.py
tests/tools/: test_chroma_manager.py  test_job_store.py  test_output_writer.py
tests/unit/: test_doc_search_agent.py  test_generation_agents.py  test_mom_agent.py  test_orchestrator.py  test_schemas.py  test_translation_agent.py
