[project]
name = "p04-meeting-intelligence"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.35.0",
    "streamlit-authenticator>=0.3.2",
    "strands-agents>=0.1.0",
    "faster-whisper>=1.0.0",
    "chromadb>=0.5.0",
    "docling>=2.0.0",
    "unstructured[pdf,docx,pptx]>=0.14.0",
    "transformers>=4.40.0",
    "sentencepiece>=0.2.0",
    "jinja2>=3.1.4",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.0",
    "boto3>=1.34.0",
    "requests>=2.31.0",
    "atlassian-python-api>=3.41.0",
    "bcrypt>=4.1.0",
    "PyYAML>=6.0.0",
    "openai>=1.30.0",
    "torch>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.2.0",
    "pytest-mock>=3.14.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]
